--- a/package.json
+++ b/package.json
@@ -8,28 +8,34 @@
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0",
+    "test": "jest",
     "dev": "quasar dev",
     "build": "quasar build"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.25.3",
     "@fortawesome/vue-fontawesome": "^3.0.8",
-    "@quasar/extras": "^1.16.4",
-    "@vueuse/firebase": "^10.10.1",
-    "firebase": "^10.12.2",
-    "quasar": "^2.8.0",
-    "vue": "^3.4.18",
-    "vue-router": "^4.0.12"
+    "@quasar/extras": "^1.16.12",
+    "@vue/vue3-jest": "^29.2.6",
+    "@vueuse/firebase": "^10.11.1",
+    "babel-jest": "^29.7.0",
+    "firebase": "^10.12.5",
+    "jest-environment-jsdom": "^29.7.0",
+    "quasar": "^2.16.8",
+    "vue": "^3.4.37",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
-    "@quasar/app-vite": "^1.4.3",
+    "@quasar/app-vite": "^1.9.4",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
-    "autoprefixer": "^10.4.2",
+    "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-vue": "^9.0.0",
+    "eslint-plugin-vue": "^9.27.0",
+    "jest": "^29.7.0",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   },
