--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ],
-  "builds": [
-    { "src": "dist/spa/**/*", "use": "@vercel/static" }
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/" }
   ]
 }
